--- a/.github/workflows/deploy-book.yml
+++ b/.github/workflows/deploy-book.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Cache conda packages
         uses: actions/cache@v4
         with:
-          path: ${{ env.CONDA_PKGS_DIRS }}
-          key: ${{ runner.os }}-conda-pkgs-${{ hashFiles('environment.yml') }}
+          path: /home/runner/conda_pkgs_dir
+          key: ${{ runner.os }}-conda-pkgs-${{ hashFiles('environment_JB.yml') }}
           restore-keys: |
             ${{ runner.os }}-conda-pkgs-
 
