--- a/.github/workflows/deploy-book.yml
+++ b/.github/workflows/deploy-book.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
           conda run -n 2025-book-env python -m ipykernel install \
             --sys-prefix \
-            --name book-env \
+            --name 2025-book-env \
             --display-name "Python (2025-book-env)"
 
       # Build the book
