Update deploy-book.yml with TeXlive build

--- a/.github/workflows/deploy-book.yml
+++ b/.github/workflows/deploy-book.yml
@@ -23,6 +23,15 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-conda-pkgs-
 
+     # Install TeXlive
+     - name: Install LaTeX toolchain for Matplotlib
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends \
+            texlive-latex-base texlive-latex-recommended texlive-latex-extra \
+            texlive-fonts-recommended texlive-fonts-extra \
+            cm-super dvipng dvisvgm ghostscript
+
       # Set up Conda from environment.yml (commit this file to the public repo)
       - name: Set up Conda
         uses: conda-incubator/setup-miniconda@v2
