Update environment.yml (Binder test)

--- a/environment.yml
+++ b/environment.yml
@@ -1,12 +1,9 @@
-name: 2025-env
+name: 8820-env
 channels:
 - conda-forge
-- pytorch
-- defaults
 dependencies:
-- python=3.11 
+- python <3.11
 - nb_conda_kernels
-- ipykernel         
 - numpy
 - scipy
 - matplotlib
@@ -18,9 +15,11 @@ dependencies:
 - nbdime
 - emcee
 - ptemcee
-- zeus-mcmc
+- ptmcmcsampler
 - numdifftools
+- zeus-mcmc
 - corner
+- mkl-service
 - scikit-learn
 - scikit-image
 - pydoe
@@ -30,5 +29,3 @@ dependencies:
   - gpyopt  
   - pymultinest
   - pymc
-  - pocomc
-
