--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -3,9 +3,29 @@ channels:
   - conda-forge
 dependencies:
   - python=3.11
+  - nb_conda_kernels
   - numpy
   - scipy
   - matplotlib
+  - pandas
+  - seaborn
+  - jupyterlab
+  - ipykernel         
+  - ipywidgets
+  - nbdime
+  - arviz
+  - emcee
+  - ptemcee
+  - zeus-mcmc
+  - numdifftools
+  - corner
+  - scikit-learn
+  - scikit-image
+  - pydoe
+  - gpy
+  - gpyopt
+  - pytorch
+  - torchvision
   - pip
   - pip:
        - watermark
